fixed add task button visibilty for mobile view

--- a/style.css
+++ b/style.css
@@ -396,4 +396,21 @@ body {
     .task-actions {
         gap: 0.35rem;
     }
+    .task-submit{  
+    border: none;
+    border-radius: 2rem;
+    padding: 0 1.25rem;
+    background: var(--primary-color);
+    color: white;
+    font-weight: 700;
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5rem;
+    cursor: pointer;
+    transition: transform 0.2s ease, background 0.2s ease;
+    position: fixed;
+    right: 46px;
+    bottom: 103px;
+    padding: 1em;
+}
 }
